Revision history for Perl distribution Filter-Crypto

2.08 Development

    - TODO

2.07 2015-02-28

    - Fixed parsing of OPENSSL_VERSION_NUMBER in openssl-1.0.2.  [Dmytro
      Zagashev <ZDM@cpan.org>, CPAN RT#102421]

    - Fixed broken link for active bugs on the CPAN Request Tracker.

    - Added optional Changes testing (skipped unless AUTHOR_TESTING).

    - Reformatted Changes file as per CPAN::Changes::Spec.

    - Made Perl Critic, Pod and Pod Coverage tests skip unless AUTHOR_TESTING.

    - Added optional POD coverage testing.

    - Added optional Perl::Critic testing.

    - Made code Perl::Critic clean.

    - Simplified and corrected Makefile.PL requirements.

2.06 2014-05-30

    - Simplified repository metadata for cleaner appearance on search.cpan.org.

2.05 2014-05-16

    - Avoided possible test failures in t/02_function.t, t/03_script.t and
      t/04_par.t by avoiding the problem of trying to open a file with a pending
      delete.

    - Reduced memory fragmentation when running encrypted Perl scripts.  [Kevin
      Groeneveld <kgroeneveld@gmail.com>, CPAN RT#95021]

    - Removed the rudimentary checks on the compiler versions in Makefile.PL
      when building these modules on Windows since it appears that using
      different compilers (and hence potentially different C RTL DLLs) is safe
      after all.  Note, however, that there is still a compatibility problem
      when building this module with Visual Studio .NET 2002/2003 (VC7) or
      earlier if your perl was built with Visual Studio 2005 (VC8) or later: see
      Perl RT#121448.  However, that is quite an unlikely scenario, so it is not
      worth checking for in Makefile.PL.

    - Changed all PerlLIO_*() function calls to the corresponding lowio
      functions: they should be redefined as necessary by perl's header files
      anyway, which is indeed the case in perl-5.8.1 and above, at least -- see